tests/neg/semantic_inline_asm_output_not_lvalue.baa
// RUN: expect-fail
// EXPECT: خرج 'مجمع' يجب أن يكون قيمة قابلة للإسناد

صحيح الرئيسية() {
    صحيح س = ١.
    مجمع {
        "nop"
        : "=a"(س + ١)
    }
    إرجع ٠.
}
